updated posts with correct descriptions

--- a/en/begin/_posts/2000-01-01-index.md
+++ b/en/begin/_posts/2000-01-01-index.md
@@ -2,7 +2,7 @@
 author: jpliew
 github_url: https://github.com/STEMTera/stemtera.github.io
 layout: book2
-title: (STMB) Beginner's Guide Table of Content
+title: Table of Content
 description: An Introduction to (STMB) and Beginner's HOWTO Use Guide.
 lang: en
 ---
