--- a/en/begin/_posts/2000-01-02-intro.md
+++ b/en/begin/_posts/2000-01-02-intro.md
@@ -1,8 +1,9 @@
 ---
 author: jpliew
 github_url: https://github.com/STEMTera/stemtera.github.io
-layout: guide 
-description: An Introduction to (STMB) and Beginner's HOWTO Use Guide.
+layout: guide
+post-card-type: article
+description: An Introduction to (STMB) and Arduino. 
 title: "Introduction"
 lang: en
 chapter : 1
