--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -1,8 +1,10 @@
 ---
 author: jpliew
-title: "Introduction - Software"
+title: "Software"
 lang: en
 layout: guide
+post-card-type: article
+description: Software, sketches and how to install Arduino IDE.
 contents:
 - Software
 - Sketches
