--- a/en/begin/_posts/2000-01-05-ide.md
+++ b/en/begin/_posts/2000-01-05-ide.md
@@ -3,6 +3,8 @@ author: jpliew
 title: "Arduino IDE"
 lang: en
 layout: guide
+post-card-type: article
+description: Arduino IDE user interface GUI explanation.
 contents:
 - Arduino IDE 
 ---
