--- a/en/begin/_posts/2000-01-06-connect.md
+++ b/en/begin/_posts/2000-01-06-connect.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Connect the (STMB)"
 layout: guide
+post-card-type: article
 lang: en
+description: How to connect the (STMB) to a computer.
 contents:
 - Connect the (STMB) 
 ---
