--- a/en/begin/_posts/2000-03-03-current.md
+++ b/en/begin/_posts/2000-03-03-current.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Introduction to Electronics"
 layout: guide
+post-card-type: article
 lang: en
+description: What is current and how to measure current.
 contents:
 - Current
 - How to Measure Current
