--- a/en/begin/_posts/2000-03-06-voltage.md
+++ b/en/begin/_posts/2000-03-06-voltage.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Introduction to Electronics"
 layout: guide
+post-card-type: article
 lang: en
+description: What is voltage and how to measure voltage.
 contents:
 - Voltage
 - How to Measure Voltage
