--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Exercise 2 - Pulse Width Modulation (PWM)"
 layout: guide
+post-card-type: article
 lang: en
+description: What is PWM and how to write Arduino PWM sketch on the (STMB).
 contents:
 - Exercise 2 - Pulse Width Modulation (PWM)
 
