--- a/en/begin/_posts/2000-04-05-exercise-3.md
+++ b/en/begin/_posts/2000-04-05-exercise-3.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Exercise 3 - Kinght Rider LED"
 layout: guide
+post-card-type: article
 lang: en
+description: Making Knight Rider Arduino running LED using the (STMB).
 contents:
 - Exercise 3 - Knight Rider LED
 
