--- a/en/begin/_posts/2000-04-07-exercise-4.md
+++ b/en/begin/_posts/2000-04-07-exercise-4.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Exercise 4 - Push Button Controlled LED"
 layout: guide
+post-card-type: article
 lang: en
+description: How to use Arduino push button and LED with the (STMB).
 contents:
 - Exercise 4 - Push Button Controlled LED
 
