--- a/en/begin/_posts/2000-04-09-exercise-5.md
+++ b/en/begin/_posts/2000-04-09-exercise-5.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Exercise 5 - Buzzer Music"
 layout: guide
+post-card-type: article
 lang: en
+description: How to make Arduino music with buzzer using the (STMB).
 contents:
 - Exercise 5 - Buzzer Music
 
