--- a/en/begin/_posts/2000-04-11-exercise-6.md
+++ b/en/begin/_posts/2000-04-11-exercise-6.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Excercise 6 - Potentiometer"
 layout: guide
+post-card-type: article
 lang: en
+description: Learn how to use potentionmeter with Arduino using the (STMB).
 contents:
 - Exercise 6 - Potentiometer
 
