--- a/en/begin/_posts/2000-04-13-exercise-7.md
+++ b/en/begin/_posts/2000-04-13-exercise-7.md
@@ -2,7 +2,9 @@
 author: jpliew
 title: "Exercise 7 - Automatic Night Lamp"
 layout: guide
+post-card-type: article
 lang: en
+description: How to make an Arduino night lamp using the (STMB).
 contents:
 - Exercise 7 - Automatic Night Lamp
 
