--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -16,7 +16,6 @@ contents:
 - Step 5 - Install LUFA
 - Step 6 - Compile & Execute HID Keyboard Demo 
 ---
-
 ![(STMB) Block Diagram](../begin/img/stemtera_breadboard_block_diagram.svg){: .three-quarter-w-w .center }
 
 Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. When operating in normal Arduino mode, the ATmega328P interacts with external devices and the ATmega32U2 act as a  TTL to USB converter. Both working together as an Arduino UNO board.
@@ -25,12 +24,8 @@ Since the IO pins of the ATmega32U2 are exposed on the tie points of the (STMB),
 
 There are 6 steps to get the LUFA environment installed:
 
-1. Install AVR Toolchain
-2. Install DFU Programmer
-3. Install DFU Driver
-4. Install MinGW
-5. Install LUFA
-6. Compile & Execute (STMB) HID Keyboard Demo
+* TOC
+{:toc}
 
 In this guide, we will go through each of the steps in setting up the LUFA development environment for the ATmega32U2.   
 
