--- a/nl/begin/_posts/2000-01-01-index.md
+++ b/nl/begin/_posts/2000-01-01-index.md
@@ -6,6 +6,7 @@ title: (STMB) Beginner's Guide Table of Content
 description: An Introduction to (STMB) and Beginner's HOWTO Use Guide.
 cover_image: cover.png
 lang: nl
+hidden: true
 ---
 <ul>
 {% for topic in site.begin %}
