--- a/nl/begin/_posts/2000-01-02-intro.md
+++ b/nl/begin/_posts/2000-01-02-intro.md
@@ -6,6 +6,7 @@ description: An Introduction to (STMB) and Beginner's HOWTO Use Guide.
 cover_image: cover.png
 title: "Introduction"
 lang: nl
+hidden: true
 chapter : 1
 contents:
 - What is Arduino? 
