--- a/nl/begin/_posts/2000-04-07-exercise-4.md
+++ b/nl/begin/_posts/2000-04-07-exercise-4.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Exercise 4 - Push Button Controlled LED"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Exercise 4 - Push Button Controlled LED
 
