--- a/nl/setup/_posts/2017-10-23-lufa.md
+++ b/nl/setup/_posts/2017-10-23-lufa.md
@@ -8,6 +8,7 @@ title: How to Setup (STMB) for LUFA Arduino USB Development
 description: A guide to setup LUFA with (STMB) for the development of USB devices that utilize the second micro-controller, ATmega32U2.
 cover_image: lufasetup.png
 lang: nl
+hidden: true
 contents:
 - Step 1 - Install AVR Toolchain
 - Step 2 - Install DFU Programmer
