--- a/nl/begin/_posts/2000-03-06-voltage.md
+++ b/nl/begin/_posts/2000-03-06-voltage.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Introduction to Electronics"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Voltage
 - How to Measure Voltage
