--- a/nl/begin/_posts/2000-04-03-exercise-2.md
+++ b/nl/begin/_posts/2000-04-03-exercise-2.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Exercise 2 - Pulse Width Modulation (PWM)"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Exercise 2 - Pulse Width Modulation (PWM)
 
