--- a/nl/begin/_posts/2000-04-05-exercise-3.md
+++ b/nl/begin/_posts/2000-04-05-exercise-3.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Exercise 3 - Kinght Rider LED"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Exercise 3 - Knight Rider LED
 
