--- a/nl/begin/_posts/2000-04-11-exercise-6.md
+++ b/nl/begin/_posts/2000-04-11-exercise-6.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Excercise 6 - Potentiometer"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Exercise 6 - Potentiometer
 
