--- a/nl/begin/_posts/2000-04-13-exercise-7.md
+++ b/nl/begin/_posts/2000-04-13-exercise-7.md
@@ -3,6 +3,7 @@ author: jpliew
 title: "Exercise 7 - Automatic Night Lamp"
 layout: guide
 lang: nl
+hidden: true
 contents:
 - Exercise 7 - Automatic Night Lamp
 
