fixed main page box layout

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -1,8 +1,6 @@
 ---
-author: JP Liew
-author_url: http://jpliew.com
+author: jpliew 
 github_url: https://github.com/STEMTera/stemtera.github.io
-twitter_username: stemtera
 layout: guide
 title: How to Setup (STMB) for LUFA Arduino USB Development
 description: A guide to setup LUFA with (STMB) for the development of USB devices that utilize the second micro-controller, ATmega32U2.
