fixed main page layout and navigation

--- a/en/begin/_posts/2000-03-03-current.md
+++ b/en/begin/_posts/2000-03-03-current.md
@@ -1,10 +1,12 @@
 ---
 author: jpliew
-title: "Introduction to Electronics"
+title: "Current"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: current_electrons_flow.svg
 lang: en
-description: What is current and how to measure current.
+description: What is current? Despite current is the flow of electrons (negative) through a conducting medium to positive charged atoms, current flow is often or normally defined as conventional current, where it flows from positive terminal to the negative. In this guide, we will be referencing conventional current as current.
+ 
 contents:
 - Current
 - How to Measure Current
@@ -14,7 +16,7 @@ contents:
 
 ![Current and Electrons Flow](img/current_electrons_flow.svg){: .full-w }
 
-Despite current is the flow of electrons (negative) through a conducting medium to positive charged atoms, current flow is ofteni or normally defined as ***Conventional current***, where it flows from **positive** terminal to the **negative**. In this guide, we will be referencing ***Conventional current*** as current.
+Despite current is the flow of electrons (negative) through a conducting medium to positive charged atoms, current flow is often or normally defined as ***Conventional current***, where it flows from **positive** terminal to the **negative**. In this guide, we will be referencing ***Conventional current*** as current.
 
 Current can only flow when there is an **energy source** that produces voltage. Without this **energy source**, electrons move randomly and fairly evenly within a wire, and current cannot flow. **Energey source** creates pressure that drives electrons in a single direction thus creating current flow.
 
