--- a/en/begin/_posts/2000-03-06-voltage.md
+++ b/en/begin/_posts/2000-03-06-voltage.md
@@ -1,15 +1,15 @@
 ---
 author: jpliew
-title: "Introduction to Electronics"
+title: "Voltage"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: potential_difference.svg 
 lang: en
-description: What is voltage and how to measure voltage.
+description: What is voltage? Voltage is the pressure or force from an electrical circuit's power source that "pushes" charged electrons through conductors. The greater the voltage, the greater is its ability to "push" the electrons through a given circuit. Voltage is also called potential. The difference in voltage between any two points or terminals in a circuit is known as the potential difference, commonly called the voltage drop. 
 contents:
 - Voltage
 - How to Measure Voltage
 ---
-
 ## Voltage
 
 ![Potential Difference](img/potential_difference.svg){: .half-h .center }
