--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -2,9 +2,11 @@
 author: jpliew
 title: "Exercise 2 - Pulse Width Modulation (PWM)"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: exercise_02_pwm.svg 
 lang: en
-description: What is PWM and how to write Arduino PWM sketch on the (STMB).
+description: What is PWM and how to write Arduino PWM sketch on the (STMB). Pulse width modulation is a modulation technique used to encode a message into a pulsing signal. Even though this is a modulation technique for encoding information for transmission, it is widely used in controlling the brightness of an LED and the speed of a motor.
+
 contents:
 - Exercise 2 - Pulse Width Modulation (PWM)
 
