--- a/en/begin/_posts/2000-04-05-exercise-3.md
+++ b/en/begin/_posts/2000-04-05-exercise-3.md
@@ -1,10 +1,11 @@
 ---
 author: jpliew
-title: "Exercise 3 - Kinght Rider LED"
+title: "Exercise 3 - Knight Rider LED"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: exercise_03_knightrider.svg
 lang: en
-description: Making Knight Rider Arduino running LED using the (STMB).
+description: The Knight Rider LED is inspired by the advanced artificial intelligent self-aware car from the 80's Knight Rider TV series. The car was a customized 1982 Pontiac Trans-Am easily identified by its light scanning from left to right. This exercise is to simulate the scanner light using LEDs.
 contents:
 - Exercise 3 - Knight Rider LED
 
@@ -16,9 +17,7 @@ schematic:
  exercise_03_schematic.svg
 breadboard:
  exercise_03_breadboard.svg
-
 ---
-
 ## Exercise 3 - Knight Rider LED
 
 ![(STMB) - Kinght Rider LED](img/exercise_03_knightrider.svg){: .full-w }
