--- a/en/begin/_posts/2000-04-09-exercise-5.md
+++ b/en/begin/_posts/2000-04-09-exercise-5.md
@@ -2,9 +2,10 @@
 author: jpliew
 title: "Exercise 5 - Buzzer Music"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: common_piezo_buzzer.svg
 lang: en
-description: How to make Arduino music with buzzer using the (STMB).
+description: The (STMB) can be used to produce musical note by sending out digital pulses in frequency corresponding to that musical note. When this frequency is being sent to a buzzer, the internal of the buzzer vibrates and thus producing a sound. In this exercise we will learn how to make Arduino music with buzzer using the (STMB).
 contents:
 - Exercise 5 - Buzzer Music
 
