--- a/en/begin/_posts/2000-04-13-exercise-7.md
+++ b/en/begin/_posts/2000-04-13-exercise-7.md
@@ -2,9 +2,10 @@
 author: jpliew
 title: "Exercise 7 - Automatic Night Lamp"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: common_photo_resistor.svg 
 lang: en
-description: How to make an Arduino night lamp using the (STMB).
+description: Learn how to make an automatic night lamp using the (STMB). An automatic night lamp is basically a lamp that will automatically turn on when it sense darkness in the environment. In this example, we will be using a photoresistor to demonstrate how to convert the ambient level into a lamp's brightness. 
 contents:
 - Exercise 7 - Automatic Night Lamp
 
