--- a/en/begin/_posts/2000-04-07-exercise-4.md
+++ b/en/begin/_posts/2000-04-07-exercise-4.md
@@ -2,9 +2,11 @@
 author: jpliew
 title: "Exercise 4 - Push Button Controlled LED"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: common_push_button.svg
 lang: en
-description: How to use Arduino push button and LED with the (STMB).
+description: In this exercise we will learn how to use the (STMB) to read the input from a push button and translate the input into a toggling state that can be used to control an LED.
+
 contents:
 - Exercise 4 - Push Button Controlled LED
 
@@ -21,7 +23,7 @@ breadboard:
 
 ## Exercise 4 - Push Button Controlled LED
 
-In this exercise we will learn how to use (STMB) to read the input from a push button and translate the input to a toggling state that can be used to control an LED. 
+In this exercise we will learn how to use the (STMB) to read the input from a push button and translate the input into a toggling state that can be used to control an LED. 
 
 {% include schematic.html %}
 
