--- a/en/begin/_posts/2000-04-11-exercise-6.md
+++ b/en/begin/_posts/2000-04-11-exercise-6.md
@@ -2,9 +2,11 @@
 author: jpliew
 title: "Excercise 6 - Potentiometer"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: common_potentionmeter.svg 
 lang: en
-description: Learn how to use potentionmeter with Arduino using the (STMB).
+description: Learn how to use potentionmeter with Arduino using the (STMB). In this exercise, we will learn how to use a potentiometer. A potentiometer is variable resistor that comes in a few different sizes and shapes. The most common shape is a three terminal round knob. The resistance of the potentiometer will change when the knob is turned. In the schematic below, one terminal of the potentiometer is connected to 5V and the other is connected to GND. This creates a potential difference in the middle terminal and forms a voltage divider circuit.
+
 contents:
 - Exercise 6 - Potentiometer
 
@@ -17,7 +19,6 @@ breadboard:
  exercise_06_breadboard.svg
 
 ---
-
 ## Exercise 6 - Potentiometer
 
 In this exercise, we will learn how to use a potentiometer. A potentiometer is variable resistor that comes in a few different sizes and shapes. The most common shape is a three terminal round knob. The resistance of the potentiometer will change when the knob is turned. In the schematic below, one terminal of the potentiometer is connected to 5V and the other is connected to GND. This creates a potential difference in the middle terminal and forms a voltage divider circuit.
