completed new layout with menu

--- a/en/begin/_posts/2000-01-02-intro.md
+++ b/en/begin/_posts/2000-01-02-intro.md
@@ -2,8 +2,10 @@
 author: jpliew
 github_url: https://github.com/STEMTera/stemtera.github.io
 layout: guide
-post-card-type: article
-description: An Introduction to (STMB) and Arduino. 
+post-card-type: image
+card-image: arduino_breadboard.svg 
+description: The (STMB) is a smart electronic breadboard with an Arduino UNO R3 compatible built inside. This 2 in 1 breadboard is specifically designed to solve common issues when using Arduino with a separate breadboard especially in the lab or classroom.
+ 
 title: "Introduction"
 lang: en
 chapter : 1
