--- a/en/begin/_posts/2000-01-05-ide.md
+++ b/en/begin/_posts/2000-01-05-ide.md
@@ -3,8 +3,9 @@ author: jpliew
 title: "Arduino IDE"
 lang: en
 layout: guide
-post-card-type: article
-description: Arduino IDE user interface GUI explanation.
+post-card-type: image
+card-image: arduino_ide.svg
+description: Arduino IDE user interface GUI explanation. Learn how to use the user interface of the Arduino IDE.
 contents:
 - Arduino IDE 
 ---
