--- a/en/begin/_posts/2000-01-06-connect.md
+++ b/en/begin/_posts/2000-01-06-connect.md
@@ -2,9 +2,11 @@
 author: jpliew
 title: "Connect the (STMB)"
 layout: guide
-post-card-type: article
+post-card-type: image
+card-image: connect_stemtera.svg
 lang: en
-description: How to connect the (STMB) to a computer.
+description: Learn how to connect the (STMB) to a computer. First, connect the larger end of the Micro USB cable to your computer. Second, connect the other smaller end of the Micro USB cable to the (STMB). The green LED light on the (STMB) will turned on and different types of Operating System might also produce a sound indicating that a USB device has being plugged into the computer.
+
 contents:
 - Connect the (STMB) 
 ---
