--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -20,9 +20,9 @@ contents:
 
 Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. When operating in normal Arduino mode, the ATmega328P interacts with external devices and the ATmega32U2 act as a  TTL to USB converter. Both working together as an Arduino UNO board.
 
-Since the IO pins of the ATmega32U2 are exposed on the tie points of the (STMB), we can fully utilize the IO pins of the ATmega32U2 and use it as an independent micro-controller. The ATmega32U2 is a very useful micro-controller for USB device development because of its native USB capability. 
+Since the IO pins of the ATmega32U2 are exposed on the tie points of the (STMB), we can fully utilise the IO pins of the ATmega32U2 and use it as an independent micro-controller. The ATmega32U2 is a very useful micro-controller for USB device development because of its native USB capability. In order to utilise the USB capability of the ATmega32U2 inside the (STMB), we need to install the LUFA framework. 
 
-There are 6 steps to get the LUFA environment installed:
+There are 6 steps to get the LUFA framework installed:
 
 * TOC
 {:toc}
