--- a/en/begin/_posts/2000-01-03-software.md
+++ b/en/begin/_posts/2000-01-03-software.md
@@ -3,8 +3,9 @@ author: jpliew
 title: "Software"
 lang: en
 layout: guide
-post-card-type: article
-description: Software, sketches and how to install Arduino IDE.
+post-card-type: image
+card-image: arduino_download.svg
+description: Software, sketches and how to install Arduino IDE. The Arduino IDE contains a text editor for writing code, a message area, a text console, a toolbar with buttons for common functions and a series of menus. It connects to the (STMB) hardware to upload programs and communicate with them.
 contents:
 - Software
 - Sketches
