--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -2,7 +2,7 @@
 author: jpliew 
 github_url: https://github.com/STEMTera/stemtera.github.io
 layout: guide
-title: How to Setup (STMB) for Arduino LUFA USB Development
+title: Arduino LUFA USB Development
 post-card-type: image
 card-image: ../../begin/img/stemtera_breadboard_block_diagram.svg
 description: Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. When operating in normal Arduino mode, the ATmega328P interacts with external devices and the ATmega32U2 act as a  TTL to USB converter. Both working together as an Arduino UNO board. This guide show how to setup LUFA with (STMB) for the development of USB devices that utilize the second micro-controller, ATmega32U2.
