--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -57,7 +57,7 @@ then click OK. A `Command Prompt` window will be displayed. On the `Command Prom
 `avr-gcc -v`
 {: .keyboard }
 
-You should see the `avr-gcc` enviroment settings and version number as below:
+You should see the `avr-gcc` environment settings and version number as below:
 
 ![avr-gcc command prompt screen](img/avr-gcc-v.svg){: .three-quarter-w-w  .center }
 
@@ -299,7 +299,7 @@ dfu-programmer atmega32u2 launch --no-reset
 
 As soon as `make dfu-launch` has finished, you should be able to see a `HID Keyboard Device` appear on the `Keyboards` section of Device Manager.
 
-If there was no extra `HID Keybaord Device` showing, confirm that the dfu programming is successful, check for 
+If there is no extra `HID Keyboard Device` showing, confirm that the dfu programming is successful, check for 
 
     0%                            100%  Programming 0x1100 bytes...
     [>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
