updated page title, and corrected typo

--- a/en/begin/_posts/2000-04-03-exercise-2.md
+++ b/en/begin/_posts/2000-04-03-exercise-2.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Exercise 2 - Pulse Width Modulation (PWM)"
+title: "Exercise 2 - Arduino Pulse Width Modulation (PWM)"
 layout: guide
 post-card-type: image
 card-image: exercise_02_pwm.svg 
