--- a/en/begin/_posts/2000-04-05-exercise-3.md
+++ b/en/begin/_posts/2000-04-05-exercise-3.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Exercise 3 - Knight Rider LED"
+title: "Exercise 3 - Arduino Knight Rider LED"
 layout: guide
 post-card-type: image
 card-image: exercise_03_knightrider.svg
