--- a/en/begin/_posts/2000-04-07-exercise-4.md
+++ b/en/begin/_posts/2000-04-07-exercise-4.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Exercise 4 - Push Button Controlled LED"
+title: "Exercise 4 - Arduino Push Button Controlled LED"
 layout: guide
 post-card-type: image
 card-image: common_push_button.svg
