--- a/en/begin/_posts/2000-04-09-exercise-5.md
+++ b/en/begin/_posts/2000-04-09-exercise-5.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Exercise 5 - Buzzer Music"
+title: "Exercise 5 - Arduino Buzzer Music"
 layout: guide
 post-card-type: image
 card-image: common_piezo_buzzer.svg
