--- a/en/begin/_posts/2000-04-11-exercise-6.md
+++ b/en/begin/_posts/2000-04-11-exercise-6.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Excercise 6 - Potentiometer"
+title: "Excercise 6 - Arduino Potentiometer"
 layout: guide
 post-card-type: image
 card-image: common_potentionmeter.svg 
