--- a/en/begin/_posts/2000-04-13-exercise-7.md
+++ b/en/begin/_posts/2000-04-13-exercise-7.md
@@ -1,6 +1,6 @@
 ---
 author: jpliew
-title: "Exercise 7 - Automatic Night Lamp"
+title: "Exercise 7 - Arduino Automatic Night Lamp"
 layout: guide
 post-card-type: image
 card-image: common_photo_resistor.svg 
