fixed TOC parameter, exercise 7 page-break

--- a/en/begin/_posts/2000-04-13-exercise-7.md
+++ b/en/begin/_posts/2000-04-13-exercise-7.md
@@ -29,6 +29,8 @@ A photoresistor or photocell or a light dependent resistor (LDR) is a component 
 
 In the circuit below, a voltage divider is formed by a 10K resistor and the photoresistor. When light shines on the photoresistor, the resistance of the photoresistor become lower, thus the voltage drop across the photoresistor will be lower. When the photoresistor is being covered and away from light, the resistance of the photresistor will become higher and caused the voltage drop across it to be higher. By knowing the voltage drop across the photoresistor, we can obtain the relative light level value converted from the voltage read across the photoresistor. 
 
+<div class="page-break"></div>
+
 {% include schematic.html %}
 
 {% include parts.html %}
