more meaningful descriptions

--- a/en/begin/_posts/2000-04-05-exercise-3.md
+++ b/en/begin/_posts/2000-04-05-exercise-3.md
@@ -5,7 +5,7 @@ layout: guide
 post-card-type: image
 card-image: exercise_03_knightrider.svg
 lang: en
-description: The Knight Rider LED is inspired by the advanced artificial intelligent self-aware car from the 80's Knight Rider TV series. The car was a customized 1982 Pontiac Trans-Am easily identified by its light scanning from left to right. This exercise is to simulate the scanner light using LEDs.
+description: What is Knight Rider and how to write Arduino Knight Rider sketch? The Knight Rider LED is inspired by the advanced artificial intelligent self-aware car from the 80's Knight Rider TV series. The car was a customized 1982 Pontiac Trans-Am easily identified by its light scanning from left to right. This exercise is to simulate the scanner light using LEDs.
 contents:
 - Exercise 3 - Knight Rider LED
 
