--- a/en/begin/_posts/2000-04-07-exercise-4.md
+++ b/en/begin/_posts/2000-04-07-exercise-4.md
@@ -5,7 +5,7 @@ layout: guide
 post-card-type: image
 card-image: common_push_button.svg
 lang: en
-description: In this exercise we will learn how to use the (STMB) to read the input from a push button and translate the input into a toggling state that can be used to control an LED.
+description: How to write push button Arduino sketch? In this exercise we will learn how to use the (STMB) to read the input from a push button and translate the input into a toggling state that can be used to control an LED.
 
 contents:
 - Exercise 4 - Push Button Controlled LED
