--- a/en/begin/_posts/2000-04-13-exercise-7.md
+++ b/en/begin/_posts/2000-04-13-exercise-7.md
@@ -5,8 +5,8 @@ layout: guide
 post-card-type: image
 card-image: common_photo_resistor.svg 
 lang: en
-description: Learn how to make an automatic night lamp using the (STMB). An automatic night lamp is basically a lamp that will automatically turn on when it sense darkness in the environment. In this example, we will be using a photoresistor to demonstrate how to convert the ambient level into a lamp's brightness. 
-contents:
+description: What is automatic night lamp and learn how to write Arduino night lamp sketch using photoresistor and Arduino. In this excercise we will learn how to make an Arduino automatic night lamp using photoresistor and the (STMB). An automatic night lamp is basically a lamp that will automatically turn on when it sense darkness in the environment. In this example, we will be using a photoresistor to demonstrate how to convert the ambient level into a lamp's brightness. 
+contents
 - Exercise 7 - Automatic Night Lamp
 
 parts:
