--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -2,10 +2,10 @@
 author: jpliew 
 github_url: https://github.com/STEMTera/stemtera.github.io
 layout: guide
-title: Arduino LUFA USB Development
+title: How to Install LUFA for Arduino USB Development
 post-card-type: image
 card-image: ../../begin/img/stemtera_breadboard_block_diagram.svg
-description: Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. When operating in normal Arduino mode, the ATmega328P interacts with external devices and the ATmega32U2 act as a  TTL to USB converter. Both working together as an Arduino UNO board. This guide show how to setup LUFA with (STMB) for the development of USB devices that utilize the second micro-controller, ATmega32U2.
+description: Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. When operating in normal Arduino mode, the ATmega328P interacts with external devices and the ATmega32U2 act as a  TTL to USB converter. Both working together as an Arduino UNO board. This guide show how to setup LUFA for the development of USB devices that utilize the second micro-controller, ATmega32U2.
 cover_image: lufasetup.png
 lang: en
 contents:
@@ -22,7 +22,7 @@ Inside the (STMB) there are two micro-controllers, ATmega328P and ATmega32U2. Wh
 
 Since the IO pins of the ATmega32U2 are exposed on the tie points of the (STMB), we can fully utilise the IO pins of the ATmega32U2 and use it as an independent micro-controller. The ATmega32U2 is a very useful micro-controller for USB device development because of its native USB capability. In order to utilise the USB capability of the ATmega32U2 inside the (STMB), we need to install the LUFA framework. 
 
-There are 6 steps to get the LUFA framework installed:
+There are 6 steps to install the LUFA USB framework for Arduino:
 
 * TOC
 {:toc}
