added restore factory default instructions

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -14,7 +14,8 @@ contents:
 - Step 3 - Install DFU Driver
 - Step 4 - Install MinGW
 - Step 5 - Install LUFA
-- Step 6 - Compile & Execute HID Keyboard Demo 
+- Step 6 - Compile & Execute HID Keyboard Demo
+- Step 7 - Restoring (STMB) to Factory Default 
 ---
 ![(STMB) Block Diagram](../begin/img/stemtera_breadboard_block_diagram.svg){: .three-quarter-w-w .center }
 
@@ -322,3 +323,45 @@ Ignore the line `make: [dfu-launch] Error 5 (ignored)`, this is not an error. It
 
 (STMB) HID Keyboard Demo is now installed on the board. Launch NOTEPAD on the computer and use a jumper wire to short GND and PB0 ( or PB1, PB2, PB3, PB4, PB5). Each pin will produce a character on NOTEPAD like a keyboard being typed.
 {: .success }
+
+## Step 7 - Restoring (STMB) to Factory Default
+
+In order to restore your (STMB) to factory setting, you need the factory firmware. Right click 
+[the factory firmware link](https://raw.githubusercontent.com/STEMTera/STEMTera-Breadboard-B328/master/Firmware/ATMEGA32U2%20Firmware/STEMTera-Breadboard-usbserial-32U2_FACTORY_DFU_COMBINED_2511.hex)
+and save the file to `C:\STEMTeraFactory`
+
+Type
+
+`cd C:\STEMTeraFactory`
+{: .keyboard}
+
+Type
+
+`dfu-programmer atmega32u2 erase`
+{: .keyboard}
+
+If the erase is successful, you will see the following status:
+
+```
+Checking memory from 0x0 to 0x6FFF...  Not blank at 0x1.
+Erasing flash...  Success
+```
+
+Type
+
+`dfu-programmer atmega32u2 flash STEMTera-Breadboard-usbserial-32U2_FACTORY_DFU_COMBINED_2511.hex --suppress-bootloader-mem`
+{: .keyboard }
+
+```
+Checking memory from 0x0 to 0x177F...  Empty.
+0%                            100%  Programming 0x1780 bytes...
+[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+0%                            100%  Reading 0x7000 bytes...
+[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>]  Success
+Validating...  Success
+0x1780 bytes written into 0x7000 bytes memory (20.98%).
+```
+
+Once you see the above status message, power off the (STMB) by removing the USB cable. Re-plug the USB cable and your (STMB) is now restored to factory default.
+{: .info } 
+
