edited restore section including RST

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -330,6 +330,12 @@ In order to restore your (STMB) to factory setting, you need the factory firmwar
 [the factory firmware link](https://raw.githubusercontent.com/STEMTera/STEMTera-Breadboard-B328/master/Firmware/ATMEGA32U2%20Firmware/STEMTera-Breadboard-usbserial-32U2_FACTORY_DFU_COMBINED_2511.hex)
 and save the file to `C:\STEMTeraFactory`
 
+Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST`. While the jumper is still connected to `GND` and `RST`, you will notice that the serial port or the USB device emulated by the (STMB) has disappear from device manager.
+
+Remove the jumper wire and Windows will pop up a message saying a new device is found and if you have followed [Step 3](#step-3---install-dfu-driver) correctly, ATmega32U2 DFU will show up in the device manager.
+
+![ATmega32U2 DFU Device Manager](img/atmega32u2_device_manager.png)
+
 Type
 
 `cd C:\STEMTeraFactory`
