corrected type RST to RST2

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -111,7 +111,7 @@ In the open dialog box, type
 
 then click OK. Device Manager will be launched and display a list of devices connected to the computer. Double click ![Port Icon](../begin/img/port_icon.svg){: .textimg }` Ports (COM & LPT) `{: .backhigh }  and the name of the (STMB)'s serial port should look like ![Port Icon](../begin/img/port_icon.svg){: .textimg }` Arduino Uno (COMx) `{: .backhigh }
 
-Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST`. While the jumper is still connected to `GND` and `RST`, you will notice that the serial port of the (STMB) has disappear from device manager.
+Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST2`. While the jumper is still connected to `GND` and `RST2`, you will notice that the serial port of the (STMB) has disappear from device manager.
 
 Remove the jumper wire and Windows will pop up a message saying a new device is found and it will try to locate the driver for it. Because DFU driver is not officially in Windows' driver repository, the search for the driver will most likely failed. 
 
@@ -330,7 +330,7 @@ In order to restore your (STMB) to factory setting, you need the factory firmwar
 [the factory firmware link](https://raw.githubusercontent.com/STEMTera/STEMTera-Breadboard-B328/master/Firmware/ATMEGA32U2%20Firmware/STEMTera-Breadboard-usbserial-32U2_FACTORY_DFU_COMBINED_2511.hex)
 and save the file to `C:\STEMTeraFactory`
 
-Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST`. While the jumper is still connected to `GND` and `RST`, you will notice that the serial port or the USB device emulated by the (STMB) has disappeared from device manager.
+Now, we need to make the ATmega32U2 to operate in DFU mode. To do that, use a jumper wire, connect one end of the jumper wire to `GND` and the other end to `RST2`. While the jumper is still connected to `GND` and `RST2`, you will notice that the serial port or the USB device emulated by the (STMB) has disappeared from device manager.
 
 Remove the jumper wire and Windows will pop up a message saying a new device is found and if you have followed [Step 3](#step-3---install-dfu-driver) correctly, ATmega32U2 DFU will show up in the device manager.
 
