changed AVR Toolchain download to stemtera website

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -36,7 +36,7 @@ In order to compile the source code of LUFA we need the AVR Toolchain from Atmel
 
 Download the recommended AVR Toolchain from
 
-[Atmel AVR 8-bit and 32-bit Toolchain 3.4.1](http://www.atmel.com/images/avr-toolchain-installer-3.4.1.1195-win32.win32.x86.exe)
+[Atmel AVR 8-bit and 32-bit Toolchain 3.4.1](https://stemtera.com/images/avr-toolchain-installer-3.4.1.1195-win32.win32.x86.exe)
 {: .browser}
 
 Once the download is completed, execute the EXE file and proceed with the installation. When asked to choose for features and folder, just click `Next` to proceed with the default selection.
