fixed mingw.org link no longer working

--- a/en/setup/_posts/2017-10-23-lufa.md
+++ b/en/setup/_posts/2017-10-23-lufa.md
@@ -140,7 +140,7 @@ MinGW, a contraction of "Minimalist GNU for Windows", is an open source software
 
 Download MinGW installer from
 
-[MinGW Installer](http://www.mingw.org/download/installer)
+[MinGW Installer](https://stemtera.com/images/mingw-get-setup.exe)
 {: .browser }
 
 Once the download is finished, execute the installer `mingw-get-setup.exe`. Click `Install` follow by `Continue` to install as default preference. The installer will start to download and update necessary catalogue files. Once this process is completed, click `Continue`.
